--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -5,6 +5,12 @@
     "tagline": "Art as eyes, witness history",
     "description": "History-in-Art 是一款将 全球艺术作品 与 历史时空探索 融合的智能交互平台，旨在帮助用户在地理与时间的双重维度中发现、研究与欣赏艺术。通过 交互式世界地图 和 时间轴浏览，用户可以从古代文明到现代艺术，跨越数千年历史，探索各大洲、各国、各城市的绘画、雕塑与其他艺术形式。内置的 AI 艺术助手。内置的 AI 时空信息助手 精准聚焦于作品的年代背景与地域分布，让用户在地图与时间轴上高效开展时空艺术探索。History-in-Art 都能让您在沉浸式的可视化体验中了解作品的历史背景、创作故事与文化价值。适合艺术爱好者、历史学者、教育工作者以及希望通过艺术了解世界的人士，是一个兼具学习、研究与灵感发现的艺术导航平台。"
   },
+  "nav": {
+    "explore": "探索历史",
+    "stories": "发现故事",
+    "guide": "使用指南",
+    "about": "关于开发者"
+  },
   "header": {
     "artworksFound": "件艺术品",
     "updating": "更新中...",
@@ -15,8 +21,8 @@
     "locations": "个地点",
     "heatmapTitle": "热力图 - 艺术品数量",
     "noArtworks": "无艺术品",
-    "artworkCount": "{{count}} 件",
-    "artworkCountPlural": "{{count}} 件",
+    "artworkCount": "{{range}} 件",
+    "artworkCountPlural": "{{range}} 件",
     "totalCountries": "总计: {{count}} 个国家/地区有艺术品",
     "maxCount": "最大值: {{count}} 件",
     "clickCountry": "点击国家查看艺术品",
